# er_ros

./: .gitattributes  .gitignore  .gitmodules  CHEAT_SHEET.md  INSTALL  INSTALL.md  LICENSE  NETWORK.md  README.md  RUN.md  earth_rover_navigation.odt  launch_recording.sh
Documentation/: CAPTURE.md  README.md
ankle_publisher/: CMakeLists.txt  package.xml
ankle_publisher/launch/: ankle_publisher_launch.launch
ankle_publisher/scripts/: ankle_publisher_node.py
battery_levels/: CMakeLists.txt  package.xml
battery_levels/scripts/: navigation_api.py
battery_levels/src/: .clang-format  battery_levels.cpp
bosch_imu_driver/: Makefile
bosch_imu_driver/config/: imu_bosch.yaml
bosch_imu_driver/launch/: imu.launch
bosch_imu_driver/nodes/: bosch_imu_node.py
config/: earth_rover_gps.yaml  gps_correction_rtk.launch  imu_bosch.yaml  robot_hardware.yaml
displays/: display.cpp  display_text.sh
earth_internal/: CMakeLists.txt  package.xml
earth_internal/cmake/: earth_rover_internals-genmsg-context.py  earth_rover_internals-genmsg.cmake
earth_internal/launch/: listener.launch  talker.launch
earth_rover/: CMakeLists.txt  package.xml
earth_rover/config/: earth_rover_4w_control.yaml  earth_rover_control.yaml  earth_rover_control_test.yaml  earth_rover_teleop_config.yaml  hardware.yaml  hardware_skid.yaml  hardware_test.yaml  twist_mux.yaml  visualization_navigation.rviz
earth_rover/launch/: depth_image_to_laser.launch  earth_rover.launch  earth_rover_4ws_controller.launch  earth_rover_controller.launch  earth_rover_joypad_control.launch  earth_rover_localization.launch  earth_rover_localization_gazebo.launch  earth_rover_navigation.launch  earth_rover_robot_launch.launch  gazebo_test.launch  gmapping.launch  visualization_ui.launch
earth_rover/map_cfg/: costmap_common_params.yaml  local_costmap_params.yaml  maze.yaml  teb_local_planner_params.yaml
earth_rover_data/: CMakeLists.txt  package.xml
earth_rover_data/config/: config.yaml
earth_rover_data/launch/: earth_rover_publisher.launch
earth_rover_data/scripts/: command_node.py  navigation_api.py  node_config.py  publisher_node.py
earth_rover_description/: CMakeLists.txt  README.md  package.xml
earth_rover_description/config/: control.yaml
earth_rover_description/launch/: description.launch  description_with_sensors.launch  earth_rover_localization.launch  gazebo.launch  gazebo_spawn.launch  gazebo_spawn_with_sensors.launch  gazebo_with_sensors.launch  move_base.launch  view_model.launch_old
earth_rover_description/meshes/: base_block.dae  battery_block.dae  steering_block.dae  wheel.dae
earth_rover_description/param/: costmap_common_params.yaml  local_costmap_params.yaml
earth_rover_description/urdf/: base.urdf.xacro  earth_rover.urdf.xacro  earth_rover_with_sensors.urdf.xacro  gps.xacro  imu.xacro  original_urdf.rviz  wheels.urdf.xacro
earth_rover_rtk/: CMakeLists.txt  CONFIGURE.md  package.xml
earth_rover_rtk/config/: leica.yaml  trimble.yaml
earth_rover_rtk/launch/: rtk.launch
earth_rover_rtk/scripts/: node_config.py  ntrip_node.py
earth_steering/: CMakeLists.txt
earth_steering/launch/: eart_steering.launch
four_wheel_steering_controller/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ntrip/: client.py  config.py  readme.txt
pololu_test/: back_left.sh  back_right.sh  front_left.sh  front_right.sh  main.cpp
scripts/: .ros.camera_rig.launch.rc  .ros.capture.launch.rc  .ros.jetson.launch.rc  .ros.pi.rc  .roslaunch.rc  50-er  build.sh  catkin_eclipse.sh  display_loop.sh  display_read.sh  earth_ankle_publisher.sh  earth_launch.sh  earth_rover_joypad.sh  earth_setup.sh  earth_view_model.sh  ip.sh  joy_cmd_1.sh  joy_cmd_2.sh  joy_cmd_3.sh  joy_cmd_4.sh  joystick_test.sh  launch_4ws_joy.sh  launch_all.sh  launch_all_old.sh  launch_battery.sh  launch_camera_service.sh  launch_core.sh  launch_gazebo_test.sh  launch_gps_correction.sh  launch_imu.sh  launch_jetson.sh  launch_joy.sh  launch_localization.sh  launch_navigation.sh  launch_planner.sh  launch_publisher.sh  launch_recording.sh  launch_robot_hardware.sh  launch_rosbag.sh  launch_rtk.sh  (+25 more)
tools/: CP210_USE.md  GOPRO.md  program_imu.sh  rsync_server.sh
web_reports/: index.php
(+27 files in other folders)
