<?xml version="1.0"?>
<package>
  <name>ankle_publisher</name>
  <version>0.0.0</version>
  <description>The ankle_publisher package</description>

  <maintainer email="earthrover@todo.todo">earthrover</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>


   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
